Don't use deprecated Boolean ctor.